# rstd

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
include/rstd/: assert.hpp  memory.hpp  rtti.hpp  string.hpp  types.hpp
include/rstd/containers/: iterator.hpp  vector.hpp
include/rstd/hash/: crc.hpp  fnv1a.hpp
include/rstd/memory/: heap.hpp  malloc.hpp
src/: assert.cpp  hash.cpp  memory.cpp  string.cpp
tests/: CMakeLists.txt
tests/libtest/: CMakeLists.txt  rstd_test.cpp  rstd_test.hpp
tests/rtti/: CMakeLists.txt  rtti_dynamic_cast.cpp  rtti_dynamic_cast_fail.cpp
tests/string/: CMakeLists.txt  string_append.cpp  string_equality.cpp  string_iterator.cpp  string_substring.cpp
